force-app/main/default/objects/XFILES__External_Content_Detail__c/XFILES__External_Content_Detail__c.object-meta.xml
<CustomObject>
    <label>External Content Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Content Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>