force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Base_Content_Version__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Base_Content_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Base Content Version (Self lookup)</description>
    <inlineHelpText>Choose Base Content Version (External Content Detail)</inlineHelpText>
    <label>Base Content Version</label>
    <referenceTo>XFILES__External_Content_Detail__c</referenceTo>
    <relationshipLabel>External Content Details</relationshipLabel>
    <relationshipName>Base_Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>