force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Client_Details__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Client_Details__c</fullName>
    <description>Browser, OS, IP address details</description>
    <inlineHelpText>Browser, OS, IP address details</inlineHelpText>
    <label>Client Details</label>
    <type>TextArea</type>
</CustomField>