force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Cloud_Storage_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Cloud_Storage_Provider_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cloud Storage Provider Name</description>
    <inlineHelpText>Cloud Storage Provider Name</inlineHelpText>
    <label>Cloud Storage Provider Name</label>
    <referenceTo>XFILES__Cloud_Storage_Provider__c</referenceTo>
    <relationshipLabel>Content Details</relationshipLabel>
    <relationshipName>External_Content_Details</relationshipName>
    <type>Lookup</type>
</CustomField>