force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Comments__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Comments__c</fullName>
    <description>Comments</description>
    <inlineHelpText>Comments</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>