force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_Delete_Status__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_Delete_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Content Delete Status</description>
    <inlineHelpText>Content Delete Status</inlineHelpText>
    <label>Content Delete Status</label>
    <type>Checkbox</type>
</CustomField>