force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_File_Extension__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_File_Extension__c</fullName>
    <description>Content File Extension</description>
    <inlineHelpText>Content File Extension</inlineHelpText>
    <label>Content File Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>