force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_File_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_File_Name__c</fullName>
    <description>Content File Name</description>
    <inlineHelpText>Content File Name</inlineHelpText>
    <label>Content File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>