force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_Local_Path__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_Local_Path__c</fullName>
    <description>Content Local Path on Client while uploading</description>
    <inlineHelpText>Content Local Path</inlineHelpText>
    <label>Content Local Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>