force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_Remote_Path__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_Remote_Path__c</fullName>
    <description>Content Remote Path</description>
    <inlineHelpText>Content Remote Path</inlineHelpText>
    <label>Content Remote Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>