force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_Size__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_Size__c</fullName>
    <description>Actual Content Size (in bytes)</description>
    <inlineHelpText>Actual Content Size (in bytes)</inlineHelpText>
    <label>Content Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>