force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_Title__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_Title__c</fullName>
    <description>Content Title</description>
    <inlineHelpText>Content Title</inlineHelpText>
    <label>Content Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>