force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_Type__c</fullName>
    <description>Content Type</description>
    <inlineHelpText>Content Type</inlineHelpText>
    <label>Content Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>