force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_UID__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_UID__c</fullName>
    <description>Content UID (Like Etag in S3)</description>
    <inlineHelpText>Content UID</inlineHelpText>
    <label>Content UID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>