force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Content_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_URL__c</fullName>
    <description>Server Content URL</description>
    <inlineHelpText>Server Content URL</inlineHelpText>
    <label>Content URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>