force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Department__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Department__c</fullName>
    <label>Department</label>
    <type>TextArea</type>
</CustomField>