force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Description__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>