force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__File_Content_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__File_Content_URL__c</fullName>
    <description>This field is used to store file content URL of Google Drive.</description>
    <inlineHelpText>This field is used to store file content URL of Google Drive.</inlineHelpText>
    <label>File Content URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>