force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Is_Link_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Is_Link_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Link Type?</description>
    <inlineHelpText>Is Link Type?</inlineHelpText>
    <label>Is Link Type?</label>
    <type>Checkbox</type>
</CustomField>