force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__IsOldFile__c.field-meta.xml
<CustomField>
    <fullName>XFILES__IsOldFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOldFile</label>
    <type>Checkbox</type>
</CustomField>