force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Linked_Attachment_Count__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Linked_Attachment_Count__c</fullName>
    <label>Linked Attachment Count</label>
    <summaryFilterItems>
        <field>XFILES__Link__c.XFILES__Related_Object_Type__c</field>
        <operation>notEqual</operation>
        <value>Document</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>XFILES__Link__c.XFILES__Related_Object_Type__c</field>
        <operation>notEqual</operation>
        <value>Content</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>XFILES__Link__c.XFILES__Related_Object_Type__c</field>
        <operation>notEqual</operation>
        <value>&apos;&apos;</value>
    </summaryFilterItems>
    <summaryForeignKey>XFILES__Link__c.XFILES__Parent_Content__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>