force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Linked_Document_Count__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Linked_Document_Count__c</fullName>
    <description>Count the # of child records that are linked as document.</description>
    <inlineHelpText>Count the # of child records that are linked as document.</inlineHelpText>
    <label>Linked Document Count</label>
    <summaryFilterItems>
        <field>XFILES__Link__c.XFILES__Related_Object_Type__c</field>
        <operation>equals</operation>
        <value>Document</value>
    </summaryFilterItems>
    <summaryForeignKey>XFILES__Link__c.XFILES__Parent_Content__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>