force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__New_Modified_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__New_Modified_URL__c</fullName>
    <label>New Modified URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>