force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Profile_Names__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Profile_Names__c</fullName>
    <label>Profile Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>