force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__S3_Sync_Job__c.field-meta.xml
<CustomField>
    <fullName>XFILES__S3_Sync_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S3 Sync Job</description>
    <inlineHelpText>Amazon S3 Sync Job</inlineHelpText>
    <label>Public Profiles</label>
    <type>Checkbox</type>
</CustomField>