force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Upload_Completion_Date_time__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Upload_Completion_Date_time__c</fullName>
    <description>Upload Completion Date/Time</description>
    <inlineHelpText>Upload Completion Date/Time</inlineHelpText>
    <label>Upload Completion Date/Time</label>
    <type>DateTime</type>
</CustomField>