force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Upload_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Upload_Failure_Reason__c</fullName>
    <description>Upload Failure Reason</description>
    <inlineHelpText>Upload Failure Reason</inlineHelpText>
    <label>Upload Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>