force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Upload_Status__c</fullName>
    <description>File Upload Status</description>
    <inlineHelpText>File Upload Status</inlineHelpText>
    <label>Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>