force-app/main/default/objects/XFILES__External_Content_Detail__c/fields/XFILES__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Version_Number__c</fullName>
    <defaultValue>Text(1.0)+&apos;~&apos;+Text(1.0)</defaultValue>
    <description>Version Number</description>
    <inlineHelpText>Version Number</inlineHelpText>
    <label>Version Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>