force-app/main/default/objects/XFILES__External_Content_Detail__c/listViews/XFILES__Today.listView-meta.xml
<ListView>
    <fullName>XFILES__Today</fullName>
    <columns>NAME</columns>
    <columns>XFILES__Content_File_Name__c</columns>
    <columns>XFILES__Cloud_Storage_Provider_Name__c</columns>
    <columns>XFILES__Client_Details__c</columns>
    <columns>XFILES__Content_Type__c</columns>
    <columns>XFILES__Content_Remote_Path__c</columns>
    <columns>XFILES__Tags__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>